# pcpp

./: .gitignore  .gitmodules  .python-version  .travis.yml  AGENTS.md  LICENSE.txt  README.rst  Readme.md  Readme.rst  evaluator.html  index.html  parser.html  pcmd.html  pcpp.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
doc/: evaluator.html  index.html  lextab.html  parser.html  parsetab.html  pcmd.html  pcpp.ref.html  preprocessor.html
pcpp/: __init__.py  cmd.py  evaluator.py  lextab.py  parser.py  parsetab.py  pcmd.py  pcpp.py  pcpp_cmd.py  preprocessor.py  tokeniser.py
pcpp/attic/: pcpp.py
test/: Readme.md  doctests.py  n_std-clang.i  n_std-gcc.i  n_std.i
test/test-c/: n_std.c
tests/: alternate_input_encodings.py  alternate_input_encodings1_ucs16le.c  alternate_input_encodings2_ucs16le.c  cstd.py  doctests.py  embedded.py  eval.py  issue0017-ref.i  issue0017.py  issue0025-ref.i  issue0025.py  issue0027.py  issue0030.py  issue0032.py  issue0037.py  issue0044.h  issue0044.py  issue0051.c  issue0051.h  issue0051.py  issue0057.h  issue0057.py  issue0059.py  issue0059a.h  issue0059b.h  issue0063.c  issue0063.py  issue0072-ref.i  issue0072.h  issue0072.py  issue0079.py  issue0098.py  issue0103.py  line-directive-nothing.py  n_std-clang.i  n_std-gcc.i  n_std-pcpp.i  n_std.i  n_std.py  passthru.py
tests/issue0017/: inc.h  issue0017.c
tests/issue0025/: inc.h  main.c
tests/issue0030/: source1.c
tests/issue0037/: inc.h
tests/issue0098/dir1/: header.h
tests/issue0098/dir2/: header.h
tests/issue0098/dir3/: header.h
tests/issue0098/dir4/: header.h
tests/test-c/: defs.h  n_std.c
