[metadata]
name = pcpp
author = Niall Douglas and David Beazley
license = BSD-3-Clause
description = A C99 preprocessor written in pure Python
url = https://github.com/ned14/pcpp
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3

[options]
packages = find:

[options.packages.find]
include = pcpp

[options.entry_points]
console_scripts = pcpp=pcpp:main
